Add Approve and Play VRFGame

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <title>Miu, Tiu, Mèn, Lém</title>
     </head>
     <body>
-        <h1>Get ZToken balance</h1>
+        <h1>Get TokenZ balance</h1>
         <button style="margin-bottom: 1em" id="detectMetaMaskBtn">Detect MetaMask</button>
         <div>
             Retrieved infos:
@@ -19,10 +19,12 @@
         <div style="margin-bottom: 1em">
             Your balance:
             <div style="display: inline" id="balanceField">0</div>
-            ZToken
+            TokenZ
         </div>
 
-        <button style="margin-bottom: 1em" id="claimZTokenFromFaucetBtn">Claim ZToken from faucet</button>
+        <button style="margin-bottom: 1em" id="claimTokenZFromFaucetBtn">Claim TokenZ from faucet</button>
+        <button style="margin-bottom: 1em" id="approveGameBtn">Approve VRF Game to spend tokens</button>
+        <button style="margin-bottom: 1em" id="playBtn">PLAY!</button>
     </body>
     <script src="../events.js"></script>
 </html>
