Add input field for input bet amount

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
 
         <button style="margin-bottom: 1em" id="claimTokenZFromFaucetBtn">Claim TokenZ from faucet</button>
         <button style="margin-bottom: 1em" id="approveGameBtn">Approve VRF Game to spend tokens</button>
+
+        <br/>
+
+        <input id="betAmountInput" placeholder="Enter your bet (1 ➡️ 100)">
         <button style="margin-bottom: 1em" id="playBtn">PLAY!</button>
     </body>
     <script src="../events.js"></script>
