--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,58 @@
         rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😺</text></svg>"
     />
+
     <head>
         <script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/web3@4.1.2/dist/web3.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/web3@4.2.0/dist/web3.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
         <title>Miu, Tiu, Mèn, Lém</title>
     </head>
-    <body>
-        <h1>Get TokenZ balance</h1>
-        <button style="margin-bottom: 1em" id="detectMetaMaskBtn">Detect MetaMask</button>
-        <div>
-            Retrieved infos:
-            <div style="margin-left: 2em" id="metaMaskData"></div>
+
+    <body style="margin: 1em">
+        <div style="margin: auto; max-width: 720px">
+            <h1><strong>Get TokenZ balance</strong></h1>
+
+            <div id="alertDiv"></div>
+
+            <button style="margin-bottom: 1em" class="btn btn-primary shadow" type="button" id="detectMetaMaskBtn">
+                <span class="spinner-border spinner-border-sm visually-hidden" id="detectMetaMaskSpinner"></span>
+                Detect MetaMask
+            </button>
+            <div>
+                Retrieved infos:
+                <div style="margin-left: 2em" id="metaMaskData"></div>
+            </div>
+            <div style="margin-bottom: 1em">
+                Your TokenZ balance:
+                <div style="display: inline" id="balanceField">0</div>
+                TokenZ
+            </div>
+
+            <button style="margin-bottom: 1em" class="btn btn-outline-secondary shadow" id="claimTokenZFromFaucetBtn">
+                <span class="spinner-border spinner-border-sm visually-hidden" id="claimingTokenSpinner"></span>
+                Claim TokenZ from faucet
+            </button>
+            <button style="margin-bottom: 1em" class="btn btn-outline-secondary shadow" id="approveGameBtn">
+                <span class="spinner-border spinner-border-sm visually-hidden" id="approvingGameSpinner"></span>
+                Approve VRF Game to spend tokens
+            </button>
+
+            <br/>
+
+            <label for="betAmountInput" class="form-label">BET A GAME</label>
+            <div class="d-flex justify-content-lg-start">
+                <div class="input-group w-auto">
+                    <input class="form-control shadow" id="betAmountInput" placeholder="Place your bet (1 ➡️ 100)" type="text">
+                    <button class="btn btn-primary shadow" id="playBtn">
+                        <span class="spinner-border spinner-border-sm visually-hidden" id="playSpinner"></span>
+                        PLAY!
+                    </button>
+                </div>
+            </div>
         </div>
-        <div style="margin-bottom: 1em">
-            Your balance:
-            <div style="display: inline" id="balanceField">0</div>
-            TokenZ
-        </div>
-
-        <button style="margin-bottom: 1em" id="claimTokenZFromFaucetBtn">Claim TokenZ from faucet</button>
-        <button style="margin-bottom: 1em" id="approveGameBtn">Approve VRF Game to spend tokens</button>
-
-        <br/>
-
-        <input id="betAmountInput" placeholder="Enter your bet (1 ➡️ 100)">
-        <button style="margin-bottom: 1em" id="playBtn">PLAY!</button>
     </body>
-    <script src="../events.js"></script>
+    <script src="./events.js"></script>
 </html>
